fix spacing issues

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -188,6 +188,10 @@
     object-fit: cover;
   }
 
+  .blog .heroImage {
+    width:100%;
+  }
+  
 .blog .articleMain ul{
   margin-top:1rem;
   margin-bottom:1rem;
@@ -202,4 +206,8 @@
 
 .blog a{
   color:orange;
+}
+
+.blog{
+  width:100%;
 }
